// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`git.repo.get.sh given: [case1] repos with local clones when: [t0] --repos testorg/* then: lists repos with aligned names and matches snapshot 1`] = `
"🐢 far out

🐚 git.repo.get repos
   ├─ repos: testorg/*
   │
   ├─ testorg
   │  ├─ a                    ~/git/testorg/a (local)
   │  ├─ medium-name          ~/git/testorg/medium-name (local)
   │  ├─ short                ~/git/testorg/short (local)
   │  └─ very-long-repo-name  ~/git/testorg/very-long-repo-name (local)
   │
   └─ found: 4 repos
"
`;

exports[`git.repo.get.sh given: [case2] repos with no matches when: [t0] --repos nonexistent-org/* then: shows crickets header and matches snapshot 1`] = `
"🐢 crickets...

🐚 git.repo.get repos
   ├─ repos: nonexistent-org-xyz-12345/*
   │
   └─ found: 0 repos
"
`;

exports[`git.repo.get.sh given: [case3] repos with repo name glob when: [t0] --repos *-repo* then: matches repos by name pattern and matches snapshot 1`] = `
"🐢 far out

🐚 git.repo.get repos
   ├─ repos: *-repo*
   │
   ├─ otherorg
   │  └─ another-repo         ~/git/otherorg/another-repo (local)
   │
   ├─ testorg
   │  └─ very-long-repo-name  ~/git/testorg/very-long-repo-name (local)
   │
   └─ found: 2 repos
"
`;

exports[`git.repo.get.sh given: [case4] repos across orgs when: [t0] --repos */* then: shows all repos from all orgs with alignment 1`] = `
"🐢 far out

🐚 git.repo.get repos
   ├─ repos: */*
   │
   ├─ otherorg
   │  └─ another-repo         ~/git/otherorg/another-repo (local)
   │
   ├─ testorg
   │  ├─ a                    ~/git/testorg/a (local)
   │  ├─ medium-name          ~/git/testorg/medium-name (local)
   │  ├─ short                ~/git/testorg/short (local)
   │  └─ very-long-repo-name  ~/git/testorg/very-long-repo-name (local)
   │
   └─ found: 5 repos
"
`;

exports[`git.repo.get.sh given: [case5] files in local repo when: [t0] --in testorg/short then: lists files with turtle header and matches snapshot 1`] = `
"🐢 far out

🐚 git.repo.get files
   ├─ repo: testorg/short (local)
   ├─ ref: origin/main
   │
   ├─ README.md
   ├─ package.json
   ├─ src/index.ts
   ├─ src/utils.ts
   │
   └─ found: 4 files
"
`;

exports[`git.repo.get.sh given: [case6] files with path filter when: [t0] --paths *.ts then: shows only ts files and matches snapshot 1`] = `
"🐢 far out

🐚 git.repo.get files
   ├─ repo: testorg/short (local)
   ├─ ref: origin/main
   ├─ paths: src/*.ts
   │
   ├─ src/index.ts
   ├─ src/utils.ts
   │
   └─ found: 2 files
"
`;

exports[`git.repo.get.sh given: [case7] files in unknown repo when: [t0] --in unknown/repo then: shows bummer dude error and matches snapshot 1`] = `
"🐢 bummer dude

🐚 git.repo.get files
   ├─ repo: unknown-org-xyz/unknown-repo-abc
   └─ error: repo not found
"
`;

exports[`git.repo.get.sh given: [case8] lines search in local repo when: [t0] --words pattern then: shows matches with context and matches snapshot 1`] = `
"🐢 far out

🐚 git.repo.get lines
   ├─ repo: testorg/short (local)
   ├─ ref: origin/main
   ├─ words: hello
   ├─ radius: 21
   │
   ├─ src/index.ts
   │  ├─
   │  │ >    1: export const hello = "world";
   │  └─
   │
   └─ found: 1 matches
"
`;

exports[`git.repo.get.sh given: [case9] lines search with custom radius when: [t0] --radius 3 then: shows 3 lines radius and matches snapshot 1`] = `
"🐢 far out

🐚 git.repo.get lines
   ├─ repo: testorg/short (local)
   ├─ ref: origin/main
   ├─ words: hello
   ├─ radius: 3
   │
   ├─ src/index.ts
   │  ├─
   │  │ >    1: export const hello = "world";
   │  └─
   │
   └─ found: 1 matches
"
`;

exports[`git.repo.get.sh given: [case10] lines search with no matches when: [t0] --words nonexistent pattern then: shows crickets header and matches snapshot 1`] = `
"🐢 crickets...

🐚 git.repo.get lines
   ├─ repo: testorg/short (local)
   ├─ ref: origin/main
   ├─ words: NonExistentPatternXyz12345
   │
   └─ found: 0 matches
"
`;

exports[`git.repo.get.sh given: [case11] lines read file when: [t0] --paths src/index.ts (no --words) then: shows full file content and matches snapshot 1`] = `
"🐢 far out

🐚 git.repo.get lines
   ├─ repo: testorg/short (local)
   ├─ ref: origin/main
   ├─ paths: src/index.ts
   │
   ├─ src/index.ts (1 lines)
   │  ├─
   │  │     1: export const hello = "world";
   │  └─
   │
   └─ found: 1 file
"
`;

exports[`git.repo.get.sh given: [case12] lines read nonexistent file when: [t0] --paths nonexistent.ts then: shows crickets header and matches snapshot 1`] = `
"🐢 crickets...

🐚 git.repo.get lines
   ├─ repo: testorg/short (local)
   ├─ ref: origin/main
   ├─ paths: nonexistent-file-xyz.ts
   │
   └─ found: 0 files
"
`;

exports[`git.repo.get.sh given: [case13] files across repos when: [t0] --repos with --words then: searches files with content across repos 1`] = `
"🐢 far out

🐚 git.repo.get files
   ├─ repos: testorg/*
   ├─ words: hello
   │
   ├─ testorg/a (local)
   │  └─ src/index.ts
   │
   ├─ testorg/medium-name (local)
   │  └─ src/index.ts
   │
   ├─ testorg/short (local)
   │  └─ src/index.ts
   │
   ├─ testorg/very-long-repo-name (local)
   │  └─ src/index.ts
   │
   └─ found: 4 files in 4 repos
"
`;

exports[`git.repo.get.sh given: [case13] files across repos when: [t1] --words only (defaults to */*) then: searches all repos for content 1`] = `
"🐢 far out

🐚 git.repo.get files
   ├─ repos: */*
   ├─ words: hello
   │
   ├─ otherorg/another-repo (local)
   │  └─ src/index.ts
   │
   ├─ testorg/a (local)
   │  └─ src/index.ts
   │
   ├─ testorg/medium-name (local)
   │  └─ src/index.ts
   │
   ├─ testorg/short (local)
   │  └─ src/index.ts
   │
   ├─ testorg/very-long-repo-name (local)
   │  └─ src/index.ts
   │
   └─ found: 5 files in 5 repos
"
`;

exports[`git.repo.get.sh given: [case14] lines across repos when: [t0] --repos with --words then: searches lines across repos 1`] = `
"🐢 far out

🐚 git.repo.get lines
   ├─ repos: testorg/*
   ├─ words: hello
   │
   ├─ testorg/a (local) — 1 matches
   │  └─ src/index.ts
   │  │  >    1: export const hello = "world";
   │
   ├─ testorg/medium-name (local) — 1 matches
   │  └─ src/index.ts
   │  │  >    1: export const hello = "world";
   │
   ├─ testorg/short (local) — 1 matches
   │  └─ src/index.ts
   │  │  >    1: export const hello = "world";
   │
   ├─ testorg/very-long-repo-name (local) — 1 matches
   │  └─ src/index.ts
   │  │  >    1: export const hello = "world";
   │
   └─ found: 4 matches in 4 repos
"
`;

exports[`git.repo.get.sh given: [case14] lines across repos when: [t1] --words only (defaults to */*) then: searches all repos for pattern 1`] = `
"🐢 far out

🐚 git.repo.get lines
   ├─ repos: */*
   ├─ words: hello
   │
   ├─ otherorg/another-repo (local) — 1 matches
   │  └─ src/index.ts
   │  │  >    1: export const hello = "world";
   │
   ├─ testorg/a (local) — 1 matches
   │  └─ src/index.ts
   │  │  >    1: export const hello = "world";
   │
   ├─ testorg/medium-name (local) — 1 matches
   │  └─ src/index.ts
   │  │  >    1: export const hello = "world";
   │
   ├─ testorg/short (local) — 1 matches
   │  └─ src/index.ts
   │  │  >    1: export const hello = "world";
   │
   ├─ testorg/very-long-repo-name (local) — 1 matches
   │  └─ src/index.ts
   │  │  >    1: export const hello = "world";
   │
   └─ found: 5 matches in 5 repos
"
`;

exports[`git.repo.get.sh given: [case14] lines across repos when: [t2] no matches in multi-repo then: shows crickets 1`] = `
"🐢 crickets...

🐚 git.repo.get lines
   ├─ repos: testorg/*
   ├─ words: NonExistentXyz123
   │
   └─ found: 0 matches
"
`;

exports[`git.repo.get.sh given: [case15] repos without --repos flag when: [t0] no --repos specified then: defaults to */* and lists all repos 1`] = `
"🐢 far out

🐚 git.repo.get repos
   ├─ repos: */*
   │
   ├─ otherorg
   │  └─ another-repo         ~/git/otherorg/another-repo (local)
   │
   ├─ testorg
   │  ├─ a                    ~/git/testorg/a (local)
   │  ├─ medium-name          ~/git/testorg/medium-name (local)
   │  ├─ short                ~/git/testorg/short (local)
   │  └─ very-long-repo-name  ~/git/testorg/very-long-repo-name (local)
   │
   └─ found: 5 repos
"
`;

exports[`git.repo.get.sh given: [case16] absent required flags when: [t0] files without --in then: exits with error and matches snapshot 1`] = `
"🐢 bummer dude

🐚 git.repo.get files
   └─ error: --in flag is required
"
`;

exports[`git.repo.get.sh given: [case16] absent required flags when: [t1] lines without --in or --repos then: exits with error and matches snapshot 1`] = `
"🐢 bummer dude

🐚 git.repo.get lines
   └─ error: --in or --repos flag is required
"
`;

exports[`git.repo.get.sh given: [case16] absent required flags when: [t2] lines without --paths or --words then: exits with error and matches snapshot 1`] = `
"🐢 bummer dude

🐚 git.repo.get lines
   ├─ repo: testorg/short (local)
   └─ error: --paths is required for read mode (no --words)
"
`;

exports[`git.repo.get.sh given: [case17] regex patterns with pipe when: [t0] --words with alternation pattern then: matches either pattern 1`] = `
"🐢 far out

🐚 git.repo.get files
   ├─ repos: testorg/*
   ├─ words: hello|add
   │
   ├─ testorg/a (local)
   │  ├─ src/index.ts
   │  └─ src/utils.ts
   │
   ├─ testorg/medium-name (local)
   │  ├─ src/index.ts
   │  └─ src/utils.ts
   │
   ├─ testorg/short (local)
   │  ├─ src/index.ts
   │  └─ src/utils.ts
   │
   ├─ testorg/very-long-repo-name (local)
   │  ├─ src/index.ts
   │  └─ src/utils.ts
   │
   └─ found: 8 files in 4 repos
"
`;

exports[`git.repo.get.sh given: [case17] regex patterns with pipe when: [t1] lines search with alternation pattern then: shows matches for either pattern 1`] = `
"🐢 far out

🐚 git.repo.get lines
   ├─ repo: testorg/short (local)
   ├─ ref: origin/main
   ├─ words: hello|add
   ├─ radius: 21
   │
   ├─ src/index.ts
   │  ├─
   │  │ >    1: export const hello = "world";
   │  └─
   │
   ├─ src/utils.ts
   │  ├─
   │  │ >    1: export const add = (a: number, b: number) => a + b;
   │  └─
   │
   └─ found: 2 matches
"
`;

exports[`git.repo.get.sh given: [case19] lines with custom --ref when: [t0] --ref HEAD is specified then: searches at HEAD ref 1`] = `
"🐢 far out

🐚 git.repo.get lines
   ├─ repo: testorg/short (local)
   ├─ ref: HEAD
   ├─ words: hello
   ├─ radius: 21
   │
   ├─ src/index.ts
   │  ├─
   │  │ >    1: export const hello = "world";
   │  └─
   │
   └─ found: 1 matches
"
`;

exports[`git.repo.get.sh given: [case20] --help flag when: [t0] --help is passed then: shows usage and exits 0 1`] = `
"usage: rhx git.repo.get <subcommand> [options]

subcommands:
  repos   list repos that match a glob
  files   list files in a repo
  lines   search or read file contents

options:
  --repos <glob>     glob pattern for repos (e.g., 'ehmpathy/*')
  --in <slug>        single repo (e.g., 'ehmpathy/domain-objects')
  --paths <glob>     filter files by path glob
  --words <pattern>  search for pattern (triggers search mode)
  --radius <N>       context lines around matches (default: 21)
  --ref <ref>        git ref to use (default: origin/main)
  --tree <name>      read a local tree's inflight state instead of
                     origin/main (uncommitted edits included).
                     names a branch or a tree dir; the repo's own
                     main clone counts as a tree too, so its branch
                     reads that clone's live disk state.
                     applies to the files and lines subcommands.
  --refresh <on|off> fetch latest before query (default: on)

examples:
  # latest committed state (the default)
  rhx git.repo.get lines --in ehmpathy/domain-objects --paths 'src/index.ts'

  # peek at inflight work in a linked worktree
  rhx git.repo.get lines --in ehmpathy/domain-objects --tree feat/new-refs --paths 'src/index.ts'

  # peek at the main clone's own live state (dirty edits included)
  rhx git.repo.get lines --in ehmpathy/domain-objects --tree main --paths 'src/index.ts'
"
`;

exports[`git.repo.get.sh given: [case25] lines read with --tree (inflight state) when: [t0] --tree names a worktree with an uncommitted edit then: shows the UNCOMMITTED content and labels it inflight 1`] = `
"🐢 far out

🐚 git.repo.get lines
   ├─ repo: testorg/short (local)
   ├─ tree: feat/inflight (inflight)
   ├─ paths: src/index.ts
   │
   ├─ src/index.ts (2 lines)
   │  ├─
   │  │     1: export const hello = "world";
   │  │     2: export const inflightOnly = "wip";
   │  └─
   │
   └─ found: 1 file
"
`;

exports[`git.repo.get.sh given: [case25] lines read with --tree (inflight state) when: [t1] no --tree on the same file then: shows the committed content only, labeled with the ref 1`] = `
"🐢 far out

🐚 git.repo.get lines
   ├─ repo: testorg/short (local)
   ├─ ref: origin/main
   ├─ paths: src/index.ts
   │
   ├─ src/index.ts (1 lines)
   │  ├─
   │  │     1: export const hello = "world";
   │  └─
   │
   └─ found: 1 file
"
`;

exports[`git.repo.get.sh given: [case26] lines search with --tree when: [t0] --words matches text only in the uncommitted edit then: finds it in the worktree 1`] = `
"🐢 far out

🐚 git.repo.get lines
   ├─ repo: testorg/short (local)
   ├─ tree: feat/inflight (inflight)
   ├─ words: inflightOnly
   ├─ radius: 21
   │
   ├─ src/index.ts
   │  ├─
   │  │ >    2: export const inflightOnly = "wip";
   │  └─
   │
   └─ found: 1 matches
"
`;

exports[`git.repo.get.sh given: [case27] files with --tree when: [t0] --tree is specified then: lists the worktree files and labels inflight 1`] = `
"🐢 far out

🐚 git.repo.get files
   ├─ repo: testorg/short (local)
   ├─ tree: feat/inflight (inflight)
   │
   ├─ README.md
   ├─ package.json
   ├─ src/index.ts
   ├─ src/utils.ts
   │
   └─ found: 4 files
"
`;

exports[`git.repo.get.sh given: [case28] --tree that matched no worktree when: [t0] an unknown tree name is given then: fails loud and names the fix 1`] = `
"🐢 bummer dude

🐚 git.repo.get files
   ├─ repo: testorg/short (local)
   ├─ tree: no-such-tree-xyz
   └─ error: no worktree named "no-such-tree-xyz"

   worktrees found:
     - main  →  <gitroot>/testorg/short
     - feat/inflight  →  <gitroot>/testorg/_worktrees/short.vlad.feat-inflight

🥥 did you know?
   ├─ you can list the worktrees yourself
   └─ git -C <gitroot>/testorg/short worktree list
"
`;

exports[`git.repo.get.sh given: [case29] --tree combined with --repos when: [t0] both flags are passed then: fails loud, since a worktree belongs to one repo 1`] = `
"🐢 bummer dude

🐚 git.repo.get lines
   ├─ repos: testorg/*
   ├─ tree: feat/inflight
   └─ error: --tree cannot be combined with --repos

🥥 did you know?
   ├─ a worktree belongs to one repo, so select that repo with --in
   └─ rhx git.repo.get lines --in <org>/<repo> --tree feat/inflight --paths '<file>'
"
`;

exports[`git.repo.get.sh given: [case30] --tree on a repo with no local clone when: [t0] the repo resolves cloud-only then: fails loud — worktrees only exist locally 1`] = `
"🐢 bummer dude

🐚 git.repo.get files
   ├─ repo: cloudorg/cloud-repo (cloud)
   ├─ tree: feat/whatever
   └─ error: --tree requires a local clone

🥥 did you know?
   ├─ worktrees only exist locally, so clone the repo first
   └─ gh repo clone cloudorg/cloud-repo <gitroot>/cloudorg/cloud-repo
"
`;

exports[`git.repo.get.sh given: [case31] a BRAND-NEW file in the worktree (untracked) when: [t0] the file is not in the index at all then: --tree still lists it and searches it, but skips ignored 1`] = `
"🐢 far out

🐚 git.repo.get files
   ├─ repo: testorg/short (local)
   ├─ tree: feat/inflight (inflight)
   │
   ├─ .gitignore
   ├─ README.md
   ├─ package.json
   ├─ src/brandNew.ts
   ├─ src/index.ts
   ├─ src/utils.ts
   │
   └─ found: 6 files
"
`;

exports[`git.repo.get.sh given: [case31] a BRAND-NEW file in the worktree (untracked) when: [t0] the file is not in the index at all then: --tree still lists it and searches it, but skips ignored 2`] = `
"🐢 far out

🐚 git.repo.get lines
   ├─ repo: testorg/short (local)
   ├─ tree: feat/inflight (inflight)
   ├─ words: brandNewSymbol
   ├─ radius: 21
   │
   ├─ src/brandNew.ts
   │  ├─
   │  │ >    1: export const brandNewSymbol = "fresh";
   │  └─
   │
   └─ found: 1 matches
"
`;

exports[`git.repo.get.sh given: [case31] a BRAND-NEW file in the worktree (untracked) when: [t1] the same repo is read WITHOUT --tree then: the brand-new file is absent — it lives in no ref 1`] = `
"🐢 far out

🐚 git.repo.get files
   ├─ repo: testorg/short (local)
   ├─ ref: origin/main
   │
   ├─ README.md
   ├─ package.json
   ├─ src/index.ts
   ├─ src/utils.ts
   │
   └─ found: 4 files
"
`;

exports[`git.repo.get.sh given: [case31] a BRAND-NEW file in the worktree (untracked) when: [t2] the gitignored file is asked for by --paths directly then: read mode refuses it too — one flag, one sense 1`] = `
"🐢 bummer dude

🐚 git.repo.get lines
   ├─ repo: testorg/short (local)
   ├─ tree: feat/inflight
   └─ error: --paths names a gitignored file

   "scratch.local" is ignored by that repo's .gitignore.
   git.repo.get serves a repo's source, not its local scratch
   — build output, caches, and secret files stay unread.

🥥 did you know?
   ├─ see what the tree does serve
   └─ rhx git.repo.get files --in testorg/short --tree feat/inflight
"
`;

exports[`git.repo.get.sh given: [case31] a BRAND-NEW file in the worktree (untracked) when: [t3] the untracked file is read by --paths directly then: read mode serves it — untracked is inflight, not absent 1`] = `
"🐢 far out

🐚 git.repo.get lines
   ├─ repo: testorg/short (local)
   ├─ tree: feat/inflight (inflight)
   ├─ paths: src/brandNew.ts
   │
   ├─ src/brandNew.ts (1 lines)
   │  ├─
   │  │     1: export const brandNewSymbol = "fresh";
   │  └─
   │
   └─ found: 1 file
"
`;

exports[`git.repo.get.sh given: [case32] --tree combined with --ref when: [t0] both source selectors are passed then: fails loud rather than silently pick one 1`] = `
"🐢 bummer dude

🐚 git.repo.get lines
   ├─ ref: origin/main
   ├─ tree: feat/inflight
   └─ error: --tree cannot be combined with --ref

🥥 did you know?
   ├─ they name two different sources, so pick one
   ├─ rhx git.repo.get lines --in <org>/<repo> --ref origin/main     # committed
   └─ rhx git.repo.get lines --in <org>/<repo> --tree feat/inflight  # inflight
"
`;

exports[`git.repo.get.sh given: [case33] --tree on the repos subcommand when: [t0] --tree is passed to a repo enumeration then: fails loud rather than silently drop it 1`] = `
"🐢 bummer dude

🐚 git.repo.get repos
   ├─ tree: feat/inflight
   └─ error: --tree has no sense on the repos subcommand

🥥 did you know?
   ├─ a worktree is a tree of one repo, so ask for its files or lines instead
   ├─ rhx git.repo.get files --in <org>/<repo> --tree feat/inflight
   └─ rhx git.repo.get lines --in <org>/<repo> --tree feat/inflight --paths '<file>'
"
`;

exports[`git.repo.get.sh given: [case34] --paths that tries to escape the worktree when: [t0] --paths walks up out of the tree with ../ then: refuses — the sanctioned tool is not a way to read the host 1`] = `
"🐢 bummer dude

🐚 git.repo.get lines
   ├─ repo: testorg/short (local)
   ├─ tree: feat/inflight
   └─ error: --paths resolves outside the worktree

   "../../../../../outside-secret.txt" walks out of the tree it was scoped to.
   git.repo.get reads repos, not the whole host filesystem.

🥥 did you know?
   ├─ give a path relative to the repo root
   └─ rhx git.repo.get lines --in testorg/short --tree feat/inflight --paths 'src/index.ts'
"
`;

exports[`git.repo.get.sh given: [case37] --tree with no --in to name its repo when: [t0] lines --tree --words, with no --in then: fails loud rather than silently drop the tree 1`] = `
"🐢 bummer dude

🐚 git.repo.get lines
   ├─ tree: feat/inflight
   └─ error: --tree requires --in to name its repo

🥥 did you know?
   ├─ a worktree belongs to one repo, so name the repo the tree belongs to
   └─ rhx git.repo.get lines --in <org>/<repo> --tree feat/inflight
"
`;

exports[`git.repo.get.sh given: [case38] git itself fails partway through a --tree read when: [t0] \`git ls-files\` fails while the tree is listed then: rethrows rather than render an honest-looking empty list 1`] = `
"🐢 bummer dude

🐚 git.repo.get files
   ├─ repo: testorg/short (local)
   ├─ tree: feat/inflight
   ├─ path: <gitroot>/testorg/_worktrees/short.vlad.feat-inflight
   └─ error: could not list the files of this tree

🥥 did you know?
   ├─ git printed the cause just above; check the tree is intact
   └─ git -C <gitroot>/testorg/_worktrees/short.vlad.feat-inflight status
"
`;

exports[`git.repo.get.sh given: [case38] git itself fails partway through a --tree read when: [t1] \`git worktree list\` fails while the tree is found then: reports a repo fault, not a bad --tree name 1`] = `
"🐢 bummer dude

🐚 git.repo.get files
   ├─ repo: testorg/short (local)
   ├─ tree: feat/inflight
   ├─ path: <gitroot>/testorg/short
   └─ error: could not list the worktrees of this tree

🥥 did you know?
   ├─ git printed the cause just above; check the tree is intact
   └─ git -C <gitroot>/testorg/short status
"
`;

exports[`git.repo.get.sh given: [case40] --tree --paths names a file the tree cannot serve when: [t0] the file is absent from the worktree then: fails loud — never an empty read dressed as a clean one 1`] = `
"🐢 bummer dude

🐚 git.repo.get lines
   ├─ repo: testorg/short (local)
   ├─ tree: feat/inflight
   └─ error: --paths named a file that tree cannot serve

   "src/absent-file-xyz.ts" is not a readable file in that tree.
   it may be absent, a directory, or unreadable to you.

🥥 did you know?
   ├─ see what the tree does serve
   └─ rhx git.repo.get files --in testorg/short --tree feat/inflight
"
`;

exports[`git.repo.get.sh given: [case41] --tree --paths names a file that is present but empty when: [t0] the file exists in the worktree with zero bytes then: reads as found, never as a miss 1`] = `
"🐢 far out

🐚 git.repo.get lines
   ├─ repo: testorg/short (local)
   ├─ tree: feat/inflight (inflight)
   ├─ paths: src/empty-stub.ts
   │
   ├─ src/empty-stub.ts (0 lines — the file is empty)
   │
   └─ found: 1 file
"
`;

exports[`git.repo.get.sh given: [case42] a binary file in the tree when: [t0] the binary is read by --paths through --tree then: refuses rather than render bytes as source lines 1`] = `
"🐢 bummer dude

🐚 git.repo.get lines
   ├─ repo: testorg/short (local)
   ├─ tree: feat/inflight
   └─ error: --paths names a binary file

   "src/logo.png" holds bytes that are not text.
   lines mode renders source, so it will not print raw bytes
   at your terminal.

🥥 did you know?
   ├─ the file list confirms it is there, without a byte of it on screen
   └─ rhx git.repo.get files --in testorg/short --tree feat/inflight --paths 'src/logo.png'
"
`;
